force-app/main/default/objects/DNB_Monitoring_Log__c/DNB_Monitoring_Log__c.object-meta.xml
<CustomObject>
    <label>D&amp;B Monitoring Log</label>
    <nameField>
        <label>D&amp;BMonitoringLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>D&amp;B Monitoring Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>