force-app/main/default/objects/DNB_Monitoring_Log__c/fields/Account_Field__c.field-meta.xml
<CustomField>
    <fullName>Account_Field__c</fullName>
    <label>Account Field</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>