force-app/main/default/objects/DNB_Monitoring_Log__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <label>Previous Value</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>