force-app/main/default/objects/DNB_Monitoring_Log__c/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <label>Timestamp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>