force-app/main/default/objects/DNB_Monitoring_Log__c/fields/Update_Success__c.field-meta.xml
<CustomField>
    <fullName>Update_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Success</label>
    <type>Checkbox</type>
</CustomField>